--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,4 +1,253 @@
 
+@ARTICLE{Saura2009-sa,
+  title    = "Conefor Sensinode 2.2: A software package for quantifying the
+              importance of habitat patches for landscape connectivity",
+  author   = "Saura, Santiago and Torn{\'e}, Josep",
+  abstract = "Maintaining and restoring landscape connectivity is currently a
+              central concern in ecology and biodiversity conservation, and
+              there is an increasing demand of user-driven tools for
+              integrating connectivity in landscape planning. Here we describe
+              the new Conefor Sensinode 2.2 (CS22) software, which quantifies
+              the importance of habitat patches for maintaining or improving
+              functional landscape connectivity and is conceived as a tool for
+              decision-making support in landscape planning and habitat
+              conservation. CS22 is based on graph structures, which have been
+              suggested to possess the greatest benefit to effort ratio for
+              conservation problems regarding landscape connectivity. CS22
+              includes new connectivity metrics based on the habitat
+              availability concept, which considers a patch itself as a space
+              where connectivity occurs, integrating in a single measure the
+              connected habitat area existing within the patches with the area
+              made available by the connections between different habitat
+              patches. These new metrics have been shown to present improved
+              properties compared to other existing metrics and are
+              particularly suited to the identification of critical landscape
+              elements for connectivity. CS22 is distributed together with GIS
+              extensions that allow for directly generating the required input
+              files from a GIS layer. CS22 and related documentation can be
+              freely downloaded from the World Wide Web.",
+  journal  = "Environmental Modelling \& Software",
+  volume   =  24,
+  number   =  1,
+  pages    = "135--139",
+  month    =  jan,
+  year     =  2009,
+  keywords = "Connectivity; Conservation priorities; Graph theory; Landscape
+              planning; Habitat availability; Ecological networks; Landscape
+              patterns"
+}
+
+@ARTICLE{McRae2009-aq,
+  title     = "Circuitscape user guide",
+  author    = "McRae, Brad H and Shah, Viral B and Mohapatra, T K",
+  abstract  = "Circuitscape is an open-source program that uses circuit theory
+               to model connectivity in heterogeneous landscapes. Its most
+               common applications include modeling movement and gene flow of
+               plants and animals, as well as identifying areas important for
+               connectivity",
+  journal   = "The University of California, Santa Barbara",
+  publisher = "docs.circuitscape.org",
+  year      =  2009
+}
+
+@ARTICLE{Beger2015-zo,
+  title     = "Integrating regional conservation priorities for multiple
+               objectives into national policy",
+  author    = "Beger, Maria and McGowan, Jennifer and Treml, Eric A and Green,
+               Alison L and White, Alan T and Wolff, Nicholas H and Klein,
+               Carissa J and Mumby, Peter J and Possingham, Hugh P",
+  abstract  = "Multinational conservation initiatives that prioritize
+               investment across a region invariably navigate trade-offs among
+               multiple objectives. It seems logical to focus where several
+               objectives can be achieved efficiently, but such multi-objective
+               hotspots may be ecologically inappropriate, or politically
+               inequitable. Here we devise a framework to facilitate a
+               regionally cohesive set of marine-protected areas driven by
+               national preferences and supported by quantitative conservation
+               prioritization analyses, and illustrate it using the Coral
+               Triangle Initiative. We identify areas important for achieving
+               six objectives to address ecosystem representation, threatened
+               fauna, connectivity and climate change. We expose trade-offs
+               between areas that contribute substantially to several
+               objectives and those meeting one or two objectives extremely
+               well. Hence there are two strategies to guide countries choosing
+               to implement regional goals nationally: multi-objective hotspots
+               and complementary sets of single-objective priorities. This
+               novel framework is applicable to any multilateral or global
+               initiative seeking to apply quantitative information in decision
+               making.",
+  journal   = "Nat. Commun.",
+  publisher = "nature.com",
+  volume    =  6,
+  pages     = "8208",
+  month     =  sep,
+  year      =  2015,
+  language  = "en"
+}
+
+@ARTICLE{Minor2008-js,
+  title    = "Uncertainty in spatially explicit population models",
+  author   = "Minor, E S and McDonald, R I and Treml, E A and Urban, D L",
+  abstract = "Spatially explicit population models (SEPMs) are often used in
+              conservation planning. However, confidence intervals around
+              predictions of spatially explicit population models can greatly
+              underestimate model uncertainty. This is partly because some
+              sources of uncertainty are not amenable to the classic methods of
+              uncertainty analysis. Here, we present a method that can be used
+              to include multiple sources of uncertainty into more realistic
+              confidence intervals. To illustrate our approach, we use a case
+              study of the wood thrush (Hylocichla mustelina) in the fragmented
+              forest of the North Carolina Piedmont. We examine 6 important
+              sources of uncertainty in our spatially explicit population
+              model: (1) the habitat map, (2) the dispersal algorithm, (3)
+              clutch size, (4) edge effects, (5) dispersal distance, and (6)
+              the intrinsic variability in our model. We found that uncertainty
+              in the habitat map had the largest effect on model output, but
+              each of the six factors had a significant effect and most had
+              significant interactions with the other factors as well. We also
+              found that our method of incorporating multiple sources of
+              uncertainty created much larger confidence intervals than the
+              projections that incorporated only sources of uncertainty
+              included in most spatially explicit population model predictions.",
+  journal  = "Biol. Conserv.",
+  volume   =  141,
+  number   =  4,
+  pages    = "956--970",
+  month    =  apr,
+  year     =  2008,
+  keywords = "Habitat mapping; Model error; Parameterization; Sensitivity; Wood
+              thrush"
+}
+
+@ARTICLE{Alvarez-Romero2018-uc,
+  title    = "Designing connected marine reserves in the face of global warming",
+  author   = "{\'A}lvarez-Romero, Jorge G and Mungu{\'\i}a-Vega, Adri{\'a}n and
+              Beger, Maria and Del Mar Mancha-Cisneros, Maria and
+              Su{\'a}rez-Castillo, Alvin N and Gurney, Georgina G and Pressey,
+              Robert L and Gerber, Leah R and Morzaria-Luna, Hem Nalini and
+              Reyes-Bonilla, H{\'e}ctor and Adams, Vanessa M and Kolb, Melanie
+              and Graham, Erin M and VanDerWal, Jeremy and Castillo-L{\'o}pez,
+              Alejandro and Hinojosa-Arango, Gustavo and
+              Petat{\'a}n-Ram{\'\i}rez, David and Moreno-Baez, Marcia and
+              God{\'\i}nez-Reyes, Carlos R and Torre, Jorge",
+  abstract = "Marine reserves are widely used to protect species important for
+              conservation and fisheries and to help maintain ecological
+              processes that sustain their populations, including recruitment
+              and dispersal. Achieving these goals requires well-connected
+              networks of marine reserves that maximize larval connectivity,
+              thus allowing exchanges between populations and recolonization
+              after local disturbances. However, global warming can disrupt
+              connectivity by shortening potential dispersal pathways through
+              changes in larval physiology. These changes can compromise the
+              performance of marine reserve networks, thus requiring adjusting
+              their design to account for ocean warming. To date, empirical
+              approaches to marine prioritization have not considered larval
+              connectivity as affected by global warming. Here, we develop a
+              framework for designing marine reserve networks that integrates
+              graph theory and changes in larval connectivity due to potential
+              reductions in planktonic larval duration (PLD) associated with
+              ocean warming, given current socioeconomic constraints. Using the
+              Gulf of California as case study, we assess the benefits and
+              costs of adjusting networks to account for connectivity, with and
+              without ocean warming. We compare reserve networks designed to
+              achieve representation of species and ecosystems with networks
+              designed to also maximize connectivity under current and future
+              ocean-warming scenarios. Our results indicate that current larval
+              connectivity could be reduced significantly under ocean warming
+              because of shortened PLDs. Given the potential changes in
+              connectivity, we show that our graph-theoretical approach based
+              on centrality (eigenvector and distance-weighted fragmentation)
+              of habitat patches can help design better-connected marine
+              reserve networks for the future with equivalent costs. We found
+              that maintaining dispersal connectivity incidentally through
+              representation-only reserve design is unlikely, particularly in
+              regions with strong asymmetric patterns of dispersal
+              connectivity. Our results support previous studies suggesting
+              that, given potential reductions in PLD due to ocean warming,
+              future marine reserve networks would require more and/or larger
+              reserves in closer proximity to maintain larval connectivity.",
+  journal  = "Glob. Chang. Biol.",
+  volume   =  24,
+  number   =  2,
+  pages    = "e671--e691",
+  month    =  feb,
+  year     =  2018,
+  keywords = "Gulf of California; ecological network; ecological process;
+              larval dispersal; marine conservation; marine reserve network;
+              ocean warming; systematic conservation planning",
+  language = "en"
+}
+
+@ARTICLE{White2014-sk,
+  title     = "The Value of Larval Connectivity Information in the Static
+               Optimization of Marine Reserve Design",
+  author    = "White, J Wilson and Schroeger, Julianna and Drake, Patrick T and
+               Edwards, Christopher A",
+  abstract  = "Marine reserve design often involves a tradeoff between meeting
+               conservation goals (persistence of fished populations) and
+               minimizing economic costs (lost fishing grounds). Optimization
+               tools such as Marxan navigate that tradeoff by finding reserve
+               configurations that minimize economic costs while protecting
+               some minimum fraction of fish habitat. However, typical Marxan
+               implementations do not account for patterns of larval
+               connectivity among reserves, a factor known to be the key to
+               population dynamics. We show how connectivity information
+               (self-recruitment and network centrality) can be incorporated
+               into the optimization. We then used a spatially explicit
+               population model to compare the performance of reserves designed
+               using habitat information alone or including connectivity.
+               Incorporating connectivity information improved reserve
+               performance for some species but not others. We conclude that
+               including connectivity information can improve reserve design
+               algorithms, but it is essential to evaluate species' population
+               dynamics to determine which species will benefit from a given
+               reserve network.",
+  journal   = "Conservation Letters",
+  publisher = "Wiley Online Library",
+  volume    =  7,
+  number    =  6,
+  pages     = "533--544",
+  month     =  nov,
+  year      =  2014,
+  keywords  = "Larval connectivity; marine reserve; marine protected area;
+               Marxan; reserve design"
+}
+
+@ARTICLE{Magris2018-yb,
+  title    = "Biologically representative and well-connected marine reserves
+              enhance biodiversity persistence in conservation planning",
+  author   = "Magris, Rafael A and Andrello, Marco and Pressey, Robert L and
+              Mouillot, David and Dalongeville, Alicia and Jacobi, Martin N and
+              Manel, St{\'e}phanie",
+  abstract = "Abstract Current methods in conservation planning for promoting
+              the persistence of biodiversity typically focus on either
+              representing species geographic distributions or maintaining
+              connectivity between reserves, but rarely both, and take a focal
+              species, rather than a multispecies, approach. Here, we link
+              prioritization methods with population models to explore the
+              impact of integrating both representation and connectivity into
+              conservation planning for species persistence. Using data on 288
+              Mediterranean fish species with varying conservation
+              requirements, we show that: (2) considering both representation
+              and connectivity objectives provides the best strategy for
+              enhanced biodiversity persistence and (2) connectivity objectives
+              were fundamental to enhancing persistence of small?ranged
+              species, which are most in need of conservation, while the
+              representation objective benefited only wide?ranging species. Our
+              approach provides a more comprehensive appraisal of planning
+              applications than approaches focusing on either representation or
+              connectivity, and will hopefully contribute to build more
+              effective reserve networks for the persistence of biodiversity.",
+  journal  = "CONSERVATION LETTERS",
+  volume   =  96,
+  pages    = "e12439",
+  month    =  feb,
+  year     =  2018,
+  keywords = "biodiversity conservation; larval dispersal; marine protected
+              areas; marine reserve design; spatial planning; spatial
+              prioritization"
+}
+
 @ARTICLE{Shima2010-jq,
   title     = "Life history and matrix heterogeneity interact to shape
                metapopulation connectivity in spatially structured environments",
