--- a/docs/glossary.Rmd
+++ b/docs/glossary.Rmd
@@ -30,7 +30,7 @@ It should be noted that both of approaches of incorporating connectivity into Ma
 
 ## In-Degree
 
-**Definition**: Out-degree indicates the number of connections leaving from each planning unit [@Minor2007-fb]. This metric ignores edge weights or strengths, and can be calculated from [${F}$](glossary.html#flow), [${M}$](glossary.html#migration), and [${P}$](glossary.html#probability) .
+**Definition**: In-degree indicates the number of connections coming into each planning unit [@Minor2007-fb]. This metric ignores edge weights or strengths, and can be calculated from [${F}$](glossary.html#flow), [${M}$](glossary.html#migration), and [${P}$](glossary.html#probability) .
 
 **Possible Objectives**: Prioritize planning units which receive input from a larger number of other planning units. The recipient planning units with a high In-degree may have higher genetic diversity [@Almany2009-vt; @Munguia-Vega2015-rh], species diversity (ref) and population resilience through greater rescue potential (ref) as a result of the high in number of incoming connections. However, planning units with high In-degree may be susceptible to outbreaks and invasive species [*e.g.* @Hock2014-or]
 
