fix typos in tutorial

--- a/docs/tutorial.Rmd
+++ b/docs/tutorial.Rmd
@@ -70,15 +70,15 @@ A simple and accessible way to integrate connectivity data into spatial prioriti
  
 To increase the probability that the connectivity process is maintained, and that the spatial conservation plan is influenced by the conservation feature, a target higher than that of most other conservation features should be set. We suggest using a tunable ’constraint’, a target multiplier (${C}$), as a way to determine the higher target for connectivity-based conservation features (Figure 2). The target for the connectivity-based conservation feature, ${T_c}$, would then be:
 $${T_c=T_j*C}$$
-with ${T_j}$ being a typical conservation target for features not related to connectivity. An appropriate value for ${C}$ can be determined by using a cost trade-off curve, similar to calibrating the Boundary Length Modifier (BLM), where one would test the sensitivity of cost of the best solution and the total summed metric. It is worth noting that the BLM may interact with ${C}$. The value of ${C}$ could be chosen as the divergent point, where the greatest increase in the connectivity metric is achieved for a relatively small increase in cost. However, the preferred approach would be to establish conservation targets which lead to a reserve network design which meets ecologically relevant conservation objective(s) such as population viability or a within network metapopulation growth rate > 1 (See “Post-hoc evaluation” section for more details). 
+with ${T_j}$ being a typical conservation target for features not related to connectivity. An appropriate value for ${C}$ can be determined by using a cost trade-off curve, similar to calibrating the Boundary Length Modifier (BLM), where one would test the sensitivity of cost of the best solution and the total summed metric. It is worth noting that the BLM may interact with ${C}$. The value of ${C}$ could be chosen as the divergent point, where the greatest increase in the connectivity metric is achieved for a relatively small increase in cost. However, the preferred approach would be to establish conservation targets which lead to a reserve network design which meets ecologically relevant conservation objective(s) such as population viability or a within network metapopulation growth rate > 1 (See "Post-hoc evaluation" section for more details). 
 
 In contrast, conservation targets set for discretized connectivity conservation features ${X_j}$ can capture different levels of importance to connectivity amongst sites [@Alvarez-Romero2018-uc] (Figure 2). To create a discrete feature, threshold value(s) must be chosen from the range of the continuous connectivity metric, ideally after ecological assessment or sensitivity analysis. The planning units that meet the threshold(s) are then discretized into unique features for which a target is set (Fig 2). Similarly, this type of threshold setting is often used with species distribution models, where each planning unit is assigned a probability of species occurrence, and a threshold value is used to convert these continuous distribution data to a binary map (presence vs absence or suitable vs unsuitable) used for a particular species (*e.g.*, @Minor2008-js). When appropriate, discrete and very high priority planning units could alternately be "locked-in"" to the final solution to guarantee their inclusion.
 
-![**Figure 2:** * Data processing workflow for three possible workflows for using raw connectivity data in spatial prioritization: 1) Connectivity as Spatial Dependency in the objective function (Raw Data -> Connectivity Matrix -> Connectivity as Spatial Dependency), 2) Continuous conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Target Setting), or 3) Discrete conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Threshold Setting -> Discrete Metrics. Coloured Arrows indicate important decision points. Red arrows indicate the conservation feature vs connectivity strength method decision point and yellow arrows indicate the continuous vs discrete conservation feature decision point.*\label{general_workflow}](images/general_workflow.png)
+![**Figure 2:** *Data processing workflow for three possible workflows for using raw connectivity data in spatial prioritization: 1) Connectivity as Spatial Dependency in the objective function (Raw Data -> Connectivity Matrix -> Connectivity as Spatial Dependency), 2) Continuous conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Target Setting), or 3) Discrete conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Threshold Setting -> Discrete Metrics. Coloured Arrows indicate important decision points. Red arrows indicate the conservation feature vs connectivity strength method decision point and yellow arrows indicate the continuous vs discrete conservation feature decision point.* \label{general_workflow}](images/general_workflow.png)
 
 # Connectivity as spatial dependencies in the objective function
 
-Another approach to incorporate connectivity in Marxan is using the directional connectivity-based data to inform the boundary cost ${cv_{ih}}$. This cost signifies the penalty associated with protecting one site but not its well-connected partner site [@Beger2010-ir]. Here, a directional connectivity data is used to parameterize the boundary cost between all pairs of planning units and set the importance of incorporating connectivity with the Boundary Length Modifier (BLM), also called  "Connectivity Strength Modifier" (CSM) [@Beger2010-ir]. Increasing the BLM reduces the edge to area ratio by minimizing costs associated with unprotected boundaries; similarly, increasing the CSM will reduce the “leakiness” of the network (i.e. amount lost from the network) by minimizing costs associated with unprotected connectivity linkages, and thus maximising connectivity strengths across the entire Marxan solution. 
+Another approach to incorporate connectivity in Marxan is using the directional connectivity-based data to inform the boundary cost ${cv_{ih}}$. This cost signifies the penalty associated with protecting one site but not its well-connected partner site [@Beger2010-ir]. Here, a directional connectivity data is used to parameterize the boundary cost between all pairs of planning units and set the importance of incorporating connectivity with the Boundary Length Modifier (BLM), also called  "Connectivity Strength Modifier" (CSM) [@Beger2010-ir]. Increasing the BLM reduces the edge to area ratio by minimizing costs associated with unprotected boundaries; similarly, increasing the CSM will reduce the "leakiness" of the network (i.e. amount lost from the network) by minimizing costs associated with unprotected connectivity linkages, and thus maximising connectivity strengths across the entire Marxan solution. 
 
 The approach of using connectivity estimates as spatial dependencies in the objective function has been used to design MPAs in the Coral Triangle [@Beger2010-ir; @Beger2015-zo]. This approach can maximize the within-network connectivity, and may improve the metapopulation growth rate and other performance metrics. In Marxan Connect, one can combine the use of connectivity as spatial dependencies with a locked-in "Focus Area" (*e.g.* an existing protected area) to generate candidate stepping stones. However, it should be noted that the method will likely triage isolated sites out of the final solution unless these are included using other methods (*e.g.* a conservation feature for an isolated site which happens to contain a unique species).
 
