switch docs to PyInstaller

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -86,7 +86,7 @@ conda create --name marcon -c conda-forge wxpython matplotlib geopandas descarte
 source activate marcon
 
 pip install python-igraph # on windows you may need to install via wheel https://www.lfd.uci.edu/~gohlke/pythonlibs/#python-igraph
-pip install cx_Freeze marxanconpy
+pip install PyInstaller marxanconpy
 ```
 
 As well as pre-requesite R packages to build the website, *i.e.*:
