update "getting started"

--- a/docs/tutorial.Rmd
+++ b/docs/tutorial.Rmd
@@ -9,11 +9,7 @@ output:
 bibliography: references.bib
 ---
 
-# Overview
-
 This page provides an overview of 'how-to' incorporate connectivity into Marxan [@Ball2009-cp], some instructions for using Marxan Connect combined with example workflows using both demographic and landscape connectivity data.  These instructions assume you have already installed Marxan Connect, but if not, instructions can be found [here](index.html#installing)
-
-The maps and plots shown in this tutorial were created in R using the shapefile exported from the "Plotting Options" tab of Marxan Connect. The R code used to make the plots can be revealed by clicking on the `Code` button below
 
 ```{r load packages,message=FALSE, warning=FALSE}
 
@@ -75,11 +71,11 @@ This tab allows users to plot connectivity metrics and Marxan results. It also a
 
 ## Using connectivity data as a 'feature'
 
-A simple and accessible way to integrate connectivity data into spatial prioritization is to treat it as a conservation feature [@DAloia2017-jp; @Magris2018-yb; @White2014-sk]. These connectivity-based conservation features are obtained by calculating connectivity metric(s) which represent connectivity process(es)  (*e.g.* Betweenness centrality), and then threshold value(s) must be chosen from the range of this metric, ideally after ecological assessment or sensitivity analysis. The planning units that meet the threshold(s) are then discretized into unique features (*i.e.* priority areas) for which a target ${T_j}$ is set (Figure 3). In the classical minimum set problem (*i.e.* Marxan), a target is set for each feature, ${T_j}$, (*e.g.* 50% of feature ${j}$) and the reserve system needs to contain at least that amount. The amount of connectivity-based conservation feature ${j}$ in planning unit ${i}$ (*i.e.* ${r_{ij}}$) is binary and is determined by whether the connectivity metric is above the threshold. Similarly, this type of threshold setting is often used with species distribution models, where each planning unit is assigned a probability of species occurrence, and a threshold value is used to convert these continuous distribution data to a binary map (presence vs absence or suitable vs unsuitable) used for a particular species (*e.g.*, @Minor2008-js). When appropriate, discrete and very high priority planning units could alternately be "locked-in" to the final solution to guarantee their inclusion. Definitions and potential conservation objectives for each connectivity based conservation feature available in Marxan Connect can be found on in the [glossary](./glossary.html).
+A simple and accessible way to integrate connectivity data into spatial prioritization is to treat it as a conservation feature [@DAloia2017-jp; @Magris2018-yb; @White2014-sk]. These connectivity-based conservation features are obtained by calculating connectivity metric(s) which represent connectivity process(es)  (*e.g.* Betweenness centrality), and then choosing a threshold value(s) from the range of this metric, ideally after ecological assessment or sensitivity analysis. The planning units that meet the threshold(s) are then discretized into unique features (*i.e.* priority areas) for which a target ${T_j}$ is set (Figure 3). In the classical minimum set problem (*i.e.* Marxan), a target is set for each feature, ${T_j}$, (*e.g.* 50% of feature ${j}$) and the reserve system needs to contain at least that amount. The amount of connectivity-based conservation feature ${j}$ in planning unit ${i}$ (*i.e.* ${r_{ij}}$) is binary and is determined by whether the connectivity metric is above the threshold. Similarly, this type of threshold setting is often used with species distribution models, where each planning unit is assigned a probability of species occurrence, and a threshold value is used to convert these continuous distribution data to a binary map (presence vs absence or suitable vs unsuitable) used for a particular species (*e.g.*, @Minor2008-js). When appropriate, discrete and very high priority planning units could alternatively be "locked-in" to the final solution to guarantee their inclusion. Definitions and potential conservation objectives for each connectivity based conservation feature available in Marxan Connect can be found on in the [glossary](./glossary.html).
 
 In the absence of ecologically pre-determined thresholds, an appropriate value for the thresholds and ${T_j}$ can be determined by using a cost trade-off curve, similar to calibrating the Boundary Length Modifier (BLM), where one would test the sensitivity of cost of the best solution and the total summed metric. It is worth noting that the BLM may interact with the thresholds and ${T_j}$. The value of the thresholds and ${T_j}$ could be chosen as the divergent point, where the greatest increase in the connectivity metric is achieved for a relatively small increase in cost. However, the preferred approach would be to establish conservation targets which lead to a reserve network design which meets ecologically relevant conservation objective(s) such as population viability or a within network metapopulation growth rate > 1 (See "Post-hoc evaluation" section for more details).
 
-![**Figure 3:** *Data processing workflow for three possible workflows for using raw connectivity data in spatial prioritization: 1) Connectivity as Spatial Dependency in the objective function (Raw Data -> Connectivity Matrix -> Connectivity as Spatial Dependency), 2) Continuous conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Target Setting), or 3) Discrete conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Threshold Setting -> Discrete Metrics. Coloured Arrows indicate important decision points. Red arrows indicate the conservation feature vs connectivity strength method decision point and yellow arrows indicate the continuous vs discrete conservation feature decision point.* \label{general_workflow}](images/general_workflow_new.png)
+![**Figure 3:** *Data processing workflow for three possible workflows for using raw connectivity data in spatial prioritization: 1) Connectivity as Spatial Dependency in the objective function (Raw Data -> Connectivity Matrix -> Connectivity as Spatial Dependency), or 2) Discrete conservation features (Raw Data -> Connectivity Matrix -> Continuous Metrics -> Threshold Setting -> Discretize Feature -> Target Setting. Red arrows indicate the conservation feature vs connectivity strength method decision point.* \label{general_workflow}](images/general_workflow_new.png)
 
 ## Connectivity as spatial dependencies in the objective function
 
@@ -93,7 +89,7 @@ Marxan Connect allows users to save Marxan Connect Project files (.MarCon) which
 
 # `marxanconpy` Python Module
 
-This python module, [`marxanconpy`](https://github.com/remi-daigle/MarxanConnect/blob/master/marxanconpy.py), contains the mathematical heart of Marxan Connect and can be used independently via the command line.
+This python module, [`marxanconpy`](https://remi-daigle.github.io/marxanconpy/), contains the mathematical heart of Marxan Connect and can be used independently via the command line.
 
 # Workflow Examples
 
